# cfs-raspberrypi

./: .gitmodules  README.md  docker-compose.yml
apps/demo/: CMakeLists.txt
apps/demo/src/: hello-gpio.c
apps/libmipea/: CMakeLists.txt  config.h
dockerfiles/: gitconfig  ubuntu18
rpi_defs/: rpi_cfe_es_startup.scr  targets.cmake  toolchain-raspberrypi-arm64.cmake  toolchain-raspberrypi-armhf.cmake
